--- a/views/gigs.handlebars
+++ b/views/gigs.handlebars
@@ -1,1 +1,28 @@
-<h1>gigs template</h1>
+<html>
+<body>
+  <section id="gigs" class="container">
+  <h1>All Gigs</h1>
+
+  {{#each gigs}}
+  <div class="gig">
+    <h3>{{title}}</h3>
+    <p>{{description}}</p>
+      <ul>
+        <li>{{budget}}</li>
+        <li><a href="mailto:{{contact_email}}" class="btn btn-reverse">Apply Now</a></li>
+      </ul>
+      <div class="tech">
+        <small>Technologies Needed: <span>{{technologies}}</span></small>
+      </div>
+    </div>
+
+  </div>
+
+  {{else}}
+    <p>No gigs availabe</p>
+  {{/each}}
+
+</section>
+</body>
+
+</html>
